--- a/client/src/app/members/member-edit/member-edit.component.html
+++ b/client/src/app/members/member-edit/member-edit.component.html
@@ -56,7 +56,7 @@
                 </form>
             </tab>
             <tab heading="Edit photos">
-                <p>Photo edits goes here</p>
+                <app-photo-editor [member]="member"></app-photo-editor>
             </tab>
         </tabset>
     </div>
